--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@vercel/postgres": "^0.7.2",
 		"@vercel/speed-insights": "^1.0.9",
 		"cookie": "^0.6.0",
+		"eslint": "^8.57.0",
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
@@ -24,8 +25,8 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.0.1",
-		"eslint": "^8",
-		"eslint-config-next": "14.1.0",
+		"eslint-config-next": "^14.1.0",
+		"eslint-config-prettier": "^9.1.0",
 		"install": "^0.13.0",
 		"npm": "^10.4.0",
 		"postcss": "^8",
