Update nextjs version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
 		],
 		"paths": {
 			"@/*": ["./*"]
-		}
+		},
+		"types": ["node"],
+		"typeRoots": ["./node_modules/@types"]
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
 	"exclude": ["node_modules"]
