--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
 	},
 	"dependencies": {
 		"@vercel/analytics": "^1.1.3",
-		"@vercel/postgres": "^0.7.2",
+		"@vercel/postgres": "^0.9.0",
 		"@vercel/speed-insights": "^1.0.9",
 		"cookie": "^0.6.0",
 		"eslint": "^8.57.0",
-		"next": "14.1.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"next": "^14.2.6",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/cookie": "^0.6.0",
-		"@types/node": "^20",
+		"@types/node": "^20.16.1",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"autoprefixer": "^10.0.1",
-		"eslint-config-next": "^14.1.0",
+		"eslint-config-next": "^14.2.6",
 		"eslint-config-prettier": "^9.1.0",
 		"install": "^0.13.0",
 		"npm": "^10.4.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.3.0",
-		"typescript": "^5"
+		"typescript": "^5.5.4"
 	}
 }
