--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@number-flow/react": "^0.3.0",
 		"@vercel/analytics": "^1.1.3",
 		"@vercel/postgres": "^0.9.0",
 		"@vercel/speed-insights": "^1.0.9",
-		"cookie": "^0.6.0",
 		"eslint": "^8.57.0",
+		"framer-motion": "^11.11.9",
 		"geist": "^1.3.1",
 		"next": "^14.2.8",
 		"react": "^18.3.1",
